# MediaServerManager

./: .gitignore  .gitmodules  README.md  build.sh  test.json  updateCmakeCache.sh
.fleet/: run.json
MediaServerManager/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.ui
MediaServerManager/Frontend/: ButtonBackgroundRectangle.qml  ButtonContextMenu.qml  ControlTabs.qml  EditTextField.qml  ListButtonsTexts.qml  ManagementButton.qml  ManagementScope.qml  QuickButtons.qml  QuickTitleLine.qml  TextBackgroundRectangle.qml  main.qml  qt_resources.qrc
MediaServerManager/Frontend/Controls/: ButtonAddNewElement.qml  ButtonContextMenu.qml  ButtonLoadConfig.qml  ButtonSaveConfig.qml  CloseButton.qml  ContextMenu.qml  ContextMenuItem.qml  EditTextField.qml  ManagementButton.qml  QuickTitleLine.qml
MediaServerManager/Frontend/Settings/: SettingsWindow.qml
MediaServerManager/Frontend/Styles/: FontStyle.qml
MediaServerManager/Frontend/Styles/Backgrounds/: TextBackgroundRectangle.qml
MediaServerManager/Frontend/Widgets/: ControlTabs.qml  ListButtonsTexts.qml  ManagementScope.qml  QuickButtons.qml  QuickButtonsScope.qml  QuickTitleScope.qml  RenamingDialog.qml
MediaServerManager/Frontend/js/: ConfigLoader.js  ConfigParser.js  DynamicItemCollector.js  ItemCreator.js  Renamer.js  itemCreator.js
MediaServerManager/Include/: DynamicScopeType.hpp
MediaServerManager/Include/command/: ICommand.hpp
MediaServerManager/Include/json/: ElementConfig.hpp  JsonManager.hpp  JsonQmlWrapper.hpp
MediaServerManager/Include/network/: EndPoint.hpp  EndPointChecker.hpp  ISocket.hpp  TcpSocket.hpp
MediaServerManager/Src/: main.cpp
MediaServerManager/Src/json/: ElementConfig.cpp  JsonManager.cpp  JsonQmlWrapper.cpp
MediaServerManager/Src/network/: EndPoint.cpp  TcpSocket.cpp
src/: .clang-format  .gitignore  CMakeLists.txt  main.cpp  main.qml  resources.qrc
src/Backend/BackFol/: Back.cpp  Back.hpp  CMakeLists.txt
src/Backend/QmlNetwork/: CMakeLists.txt  QmlCommandSender.cpp  QmlCommandSender.hpp
src/Frontend/: CMakeLists.txt  ModuleDescriptions.cmake  main.qml  qt_resources.qrc
src/Frontend/Actions/: ContextMenuActionChangeBindingName.qml  ContextMenuActionChangeXmlMessage.qml  ContextMenuActionDelete.qml  ContextMenuActionRename.qml  ContextMenuActionSqlBinding.qml
src/Frontend/Backgrounds/: ButtonBackgroundRectangle.qml  CMakeLists.txt  TabButtonBackground.qml  TextBackgroundRectangle.qml
src/Frontend/Controls/: Button.qml  ButtonAddNewControl.qml  ButtonAddNewElement.qml  ButtonLoadConfig.qml  ButtonSaveConfig.qml  CMakeLists.txt  ChangeBindingWindow.qml  CloseButton.qml  ContextMenu.qml  ContextMenuAction.qml  ContextMenuItem.qml  ContextMenuMouseArea.qml  EditTextField.qml  ManagementButton.qml  ManagementButtonWithText.qml  ManagementTextEdit.qml  QuickTitleLine.qml  Table.qml  Text.qml  TextField.qml  TransformMouseArea.qml
src/Frontend/Controls/ContextMenuAction/: CMakeLists.txt  ContextMenuActionChangeBindingName.qml  ContextMenuActionDelete.qml
src/Frontend/Dialogs/: ChangeBindingWindow.qml  ChangeSqlBindingWindow.qml  CreateElementDialog.qml  CreateTabDialog.qml  RenamingDialog.qml  SettingsWindow.qml
src/Frontend/Global/: ManagementControls.qml  NetworkSettings.qml
src/Frontend/Js/: CMakeLists.txt  ConfigLoader.js  DynamicItemCollector.js  ItemCreator.js  ObjectsQrcPath.js  QrcItemCreator.js
src/Frontend/ManagementControls/: CommandPairs.qml  LiveData.qml  ManagementButton.qml  ManagementButtonWithText.qml  ManagementTextEdit.qml  Table.qml
src/Frontend/QmlObjects/: CMakeLists.txt
src/Frontend/QmlObjects/Command/: CMakeLists.txt  QmlCommandSender.cpp  QmlCommandSender.hpp
src/Frontend/QmlObjects/DataBase/: CMakeLists.txt  QmlDataBase.cpp  QmlDataBase.hpp
src/Frontend/QmlObjects/LiveData/: CMakeLists.txt  QmlLiveData.cpp  QmlLiveData.hpp
src/Frontend/QmlObjects/Network/: CMakeLists.txt  QmlSocketManager.cpp  QmlSocketManager.hpp
src/Frontend/Settings/: CMakeLists.txt  MidiSettings.qml  NetworkSettings.qml  SettingsWindow.qml
src/Frontend/Styles/: CMakeLists.txt  FontStyle.qml  ManagementButtonStyle.qml  TextEditStyle.qml
src/Frontend/Styles/Backgrounds/: ButtonBackgroundRectangle.qml  TabButtonBackground.qml  TextBackgroundRectangle.qml
src/Frontend/Widgets/: CMakeLists.txt  ControlTabs.qml  ManagementScope.qml  QuickButtonsScope.qml  QuickTitleScope.qml  RenamingDialog.qml  Table.qml
src/Frontend/js/: DynamicItemCollector.js  Renamer.js
src/Include/: DynamicScopeType.hpp  ManagementScope.hpp
src/Include/Command/: ActionCommand.hpp  Command.hpp  CommandBuilder.hpp  CommandItem.hpp  CommandParser.hpp  ICommand.hpp  InfoCommand.hpp
src/Include/DataBase/: DataBaseManager.cpp  DataBaseManager.hpp
src/Include/Json/: ElementConfig.hpp  JsonQmlWrapper.hpp
src/Include/LiveData/: LiveData.hpp  QmlLiveDataTracker.hpp
src/Include/Network/: SocketManager.hpp  TcpManager.hpp
src/Include/command/: ActionCommand.hpp  Command.hpp  CommandBuilder.hpp  CommandItem.hpp  CommandParser.hpp  HideCommand.hpp  ICommand.hpp  InfoCommand.hpp  PlayCommand.hpp  TextInfoCommand.hpp
src/Include/json/: ElementConfig.hpp  JsonQmlWrapper.hpp
src/Include/network/: TcpManager.hpp
src/Src/: ManagementScope.cpp  main.cpp
src/Src/Command/: ActionCommand.cpp  Command.cpp  CommandItem.cpp  InfoCommand.cpp
src/Src/Json/: ElementConfig.cpp  JsonQmlWrapper.cpp
src/Src/LiveData/: LiveData.cpp  QmlLiveDataTracker.cpp
src/Src/Network/: SocketManager.cpp  TcpManager.cpp
src/Src/command/: ActionCommand.cpp  Command.cpp  CommandItem.cpp  HideCommand.cpp  InfoCommand.cpp  PlayCommand.cpp  TextInfoCommand.cpp
src/Src/json/: JsonQmlWrapper.cpp
src/Src/network/: TcpManager.cpp
